--- a/reportbackend/package.json
+++ b/reportbackend/package.json
@@ -29,6 +29,7 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.14.10",
     "@types/pg": "^8.11.6",
+    "@types/sequelize": "^4.28.20",
     "cors": "^2.8.5",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3"
