--- a/myreportapp/package.json
+++ b/myreportapp/package.json
@@ -17,21 +17,55 @@
     "cordova-android": "^13.0.0",
     "cordova-browser": "^7.0.0",
     "cordova-plugin-camera": "^7.0.0",
+    "cordova-plugin-file": "^8.1.0",
+    "cordova-plugin-file-transfer": "^2.0.0",
+    "cordova-plugin-firebasex": "^16.5.0",
     "cordova-plugin-geolocation": "^5.0.0",
     "cordova-plugin-x-toast": "^2.7.3"
   },
   "cordova": {
     "platforms": [
-      "browser",
-      "android"
+      "android",
+      "browser"
     ],
     "plugins": {
       "cordova-plugin-camera": {
         "ANDROIDX_CORE_VERSION": "1.8.0"
       },
       "cordova-plugin-x-toast": {},
-      "cordova-plugin-geolocation": {
-        "GPS_REQUIRED": "true"
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-firebasex": {
+        "FIREBASE_ANALYTICS_COLLECTION_ENABLED": "true",
+        "FIREBASE_PERFORMANCE_COLLECTION_ENABLED": "true",
+        "FIREBASE_CRASHLYTICS_COLLECTION_ENABLED": "true",
+        "FIREBASE_FCM_AUTOINIT_ENABLED": "true",
+        "FIREBASE_ANALYTICS_WITHOUT_ADS": "false",
+        "GOOGLE_ANALYTICS_ADID_COLLECTION_ENABLED": "true",
+        "GOOGLE_ANALYTICS_DEFAULT_ALLOW_ANALYTICS_STORAGE": "true",
+        "GOOGLE_ANALYTICS_DEFAULT_ALLOW_AD_STORAGE": "true",
+        "GOOGLE_ANALYTICS_DEFAULT_ALLOW_AD_USER_DATA": "true",
+        "GOOGLE_ANALYTICS_DEFAULT_ALLOW_AD_PERSONALIZATION_SIGNALS": "true",
+        "ANDROID_ICON_ACCENT": "#FF00FFFF",
+        "ANDROID_FIREBASE_PERFORMANCE_MONITORING": "false",
+        "ANDROID_PLAY_SERVICES_TAGMANAGER_VERSION": "18.0.4",
+        "ANDROID_PLAY_SERVICES_AUTH_VERSION": "20.7.0",
+        "ANDROID_FIREBASE_ANALYTICS_VERSION": "21.6.2",
+        "ANDROID_FIREBASE_MESSAGING_VERSION": "23.4.1",
+        "ANDROID_FIREBASE_CONFIG_VERSION": "21.6.3",
+        "ANDROID_FIREBASE_PERF_VERSION": "20.5.2",
+        "ANDROID_FIREBASE_AUTH_VERSION": "22.3.1",
+        "ANDROID_FIREBASE_INAPPMESSAGING_VERSION": "20.4.2",
+        "ANDROID_FIREBASE_FIRESTORE_VERSION": "24.11.1",
+        "ANDROID_FIREBASE_FUNCTIONS_VERSION": "20.4.0",
+        "ANDROID_FIREBASE_IID_VERSION": "21.1.0",
+        "ANDROID_FIREBASE_INSTALLATIONS_VERSION": "17.2.0",
+        "ANDROID_FIREBASE_CRASHLYTICS_VERSION": "18.6.4",
+        "ANDROID_FIREBASE_CRASHLYTICS_NDK_VERSION": "18.6.4",
+        "ANDROID_GSON_VERSION": "2.9.0",
+        "ANDROID_FIREBASE_PERF_GRADLE_PLUGIN_VERSION": "1.4.2",
+        "ANDROID_GRPC_OKHTTP": "1.46.0"
       }
     }
   },
